--- a/package.json
+++ b/package.json
@@ -11,18 +11,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/ejs": "^3.1.5",
     "@types/node": "^22.13.1",
     "esbuild": "^0.25.0",
     "prettier": "^3.5.0",
     "tsx": "^4.19.2"
   },
   "dependencies": {
-    "ejs": "^3.1.10",
     "es-toolkit": "^1.32.0",
     "glob": "^11.0.1",
-    "nano-jsx": "^0.1.0",
-    "preact": "^10.25.4",
-    "preact-render-to-string": "^6.5.13"
+    "outdent": "^0.8.0"
   }
 }
