chore: Update package config

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "recognise",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "recognise": "tsx src/recognise.ts"
   },
+  "files": [
+    "dist"
+  ],
   "author": "",
   "license": "ISC",
   "description": "",
