--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "c12": "^2.0.2",
     "es-toolkit": "^1.32.0",
     "glob": "^11.0.1",
-    "outdent": "^0.8.0"
+    "outdent": "^0.8.0",
+    "vitest": "^3.0.6"
   },
   "overrides": {
     "esbuild": "^0.25.0"
