--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "test": "vitest",
+    "test:cov": "vitest --run --coverage",
+    "test:ui": "vitest --ui --coverage.enabled=true",
     "recognise": "tsx src/recognise.ts"
   },
   "files": [
@@ -14,14 +17,17 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.13.1",
+    "@vitest/coverage-v8": "^3.0.6",
     "esbuild": "^0.25.0",
     "prettier": "^3.5.0",
     "tsx": "^4.19.2"
   },
   "dependencies": {
+    "@types/html-minifier-terser": "^7.0.2",
     "c12": "^2.0.2",
     "es-toolkit": "^1.32.0",
     "glob": "^11.0.1",
+    "html-minifier-terser": "^7.2.0",
     "outdent": "^0.8.0",
     "vitest": "^3.0.6"
   },
