--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@vitest/coverage-v8": "^3.0.6",
     "esbuild": "^0.25.0",
     "prettier": "^3.5.0",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "vitest": "^3.0.6"
   },
   "dependencies": {
     "c12": "^2.0.2",
     "es-toolkit": "^1.32.0",
     "glob": "^11.0.1",
-    "outdent": "^0.8.0",
-    "vitest": "^3.0.6"
+    "outdent": "^0.8.0"
   },
   "overrides": {
     "esbuild": "^0.25.0"
