--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "esbuild": "^0.25.0",
     "prettier": "^3.5.0",
     "tsx": "^4.19.2",
+    "type-fest": "^4.35.0",
+    "typescript": "^5.7.3",
     "vitest": "^3.0.6"
   },
   "dependencies": {
